manifests/platform-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platformone-system
  labels:
    platformone.io/managed-by: platformone-local-lab
    platformone.io/environment: local
    platformone.io/purpose: platform-core
    platformone.io/owner: platform-engineering
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    platformone.io/managed-by: platformone-local-lab
    platformone.io/environment: local
    platformone.io/purpose: observability
    platformone.io/owner: sre
---
apiVersion: v1
kind: Namespace
metadata:
  name: security
  labels:
    platformone.io/managed-by: platformone-local-lab
    platformone.io/environment: local
    platformone.io/purpose: security
    platformone.io/owner: security-engineering
---
apiVersion: v1
kind: Namespace
metadata:
  name: gitops
  labels:
    platformone.io/managed-by: platformone-local-lab
    platformone.io/environment: local
    platformone.io/purpose: gitops
    platformone.io/owner: platform-engineering
---
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    platformone.io/managed-by: platformone-local-lab
    platformone.io/environment: local
    platformone.io/purpose: product-workloads
    platformone.io/owner: product-engineering
---
apiVersion: v1
kind: Namespace
metadata:
  name: sandbox
  labels:
    platformone.io/managed-by: platformone-local-lab
    platformone.io/environment: local
    platformone.io/purpose: experiments
    platformone.io/owner: platform-engineering
